syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message OrderCancellation {
    bool long = 1;
    uint64 price = 2;
    uint64 quantity = 3;
    string priceDenom = 4;
    string assetDenom = 5;
    bool open = 6;
    string leverage = 7;
}
