syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Twap {
  
  uint64 lastEpoch = 1; 
  repeated uint64 prices = 2; 
  uint64 twapPrice = 3; 
  string priceDenom = 4;
  string assetDenom = 5;
}
