syntax = "proto3";
package seiprotocol.seichain.legacy.dex.v0;

import "gogoproto/gogo.proto";
import "legacy/dex/v0/params.proto";
import "legacy/dex/v0/long_book.proto";
import "legacy/dex/v0/short_book.proto";
import "legacy/dex/v0/twap.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types/legacy/v0";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated LongBook longBookList = 2 [(gogoproto.nullable) = false];
  repeated ShortBook shortBookList = 3 [(gogoproto.nullable) = false];
  repeated Twap twapList = 4;
  uint64 lastEpoch = 5;

}