syntax = "proto3";
package seiprotocol.seichain.legacy.dex.v0;

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types/legacy/v0";
import "legacy/dex/v0/order_entry.proto"; 
import "gogoproto/gogo.proto";

message SettlementEntry {
  string account = 1 [(gogoproto.jsontag) = "account"];
  string priceDenom = 2 [(gogoproto.jsontag) = "price_denom"];
  string assetDenom = 3 [(gogoproto.jsontag) = "asset_denom"];
  string quantity = 4 [(gogoproto.jsontag) = "quantity"];
  string executionCostOrProceed = 5 [(gogoproto.jsontag) = "execution_cost_or_proceed"];
  string expectedCostOrProceed = 6 [(gogoproto.jsontag) = "expected_cost_or_proceed"];
  string positionDirection = 7 [(gogoproto.jsontag) = "position_direction"];
  string positionEffect = 8 [(gogoproto.jsontag) = "position_effect"];
  string leverage = 9 [(gogoproto.jsontag) = "leverage"];
}

message Settlements {
  int64 epoch = 1 [(gogoproto.jsontag) = "epoch"];
  repeated SettlementEntry entries = 2 [(gogoproto.jsontag) = "entries"];
}